# cpp-prack-dnf-minimization

./: CMakeLists.txt  button.cpp  center_positioned_string.cpp  center_positioned_string.h  general_data.cpp  general_data.h  inoutput_field.cpp  inoutput_field.h  main.cpp  minimizator.cpp  minimizator.h  rounded_rectangle.h  vals_table.cpp  vals_table.h  value_shape.cpp  value_shape.h  variable_combination.cpp  variable_combination.h  variable_in_function.cpp  variable_in_function.h
